# SideProjectsPython

./: .gitignore  README.md
python_core/: Pipfile  requirements.txt
python_core/cli_malware_scanner/: scanner.py  scanner_config.yml
python_core/cli_malware_scanner/test_directory/: test2.txt
python_core/log_aggr_and_analyzer/: main.py
python_core/log_aggr_and_analyzer/config/: log_config.yml
python_core/log_aggr_and_analyzer/log_scanner/: parser.py  report.py
python_core/log_aggr_and_analyzer/tools/: log_cleaner.sh
python_core/python_basics/file_handling_project/basic_file_i_o/: basic_operations.py  example.txt  large_text_source.txt  output.txt
python_core/python_basics/file_handling_project/combine_file_i_o/: combine_operations.py  first_text.txt  json_example.json  second_text.txt  yaml_example.yaml
python_core/python_basics/file_handling_project/csv_file_i_o/: csv_example.csv  csv_example_2.csv  csv_operations.py
python_core/python_basics/file_handling_project/json_file_i_o/: error.json  example.json  json_operations.py
python_core/python_basics/file_handling_project/yaml_file_i_o/: error.yml  malware_scan_config.yml  yaml_operations.py
python_core/python_basics/malware_sample_project/: main.py  oop_first.py
python_core/python_basics/malware_sample_project/malware/: report.py  repository.py  sample.py  scanner.py  source.py
threat_intel/: pyproject.toml
threat_intel/threatintel/: cli.py  mypy.ini  rules.jsonl  rules.yara
threat_intel/threatintel/rules/: manager.py  parser.py
