[project]
name = "threat-intel-project"
version = "0.1.0"
description = ""
authors = [
    {name = "DenyysChernenko",email = "xchern08@stud.fit.vutbr.cz"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer (>=0.16.0,<0.17.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "yara-python (>=4.5.4,<5.0.0)",
    "plyara (>=2.2.8,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "mypy (>=1.16.0,<2.0.0)",
    "ruff (>=0.11.13,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
